fix(rux-global-status-bar): overflow issue w/ pop up menu (#180)

--- a/packages/astro-components-stencil/src/components/rux-global-status-bar/rux-global-status-bar.scss
+++ b/packages/astro-components-stencil/src/components/rux-global-status-bar/rux-global-status-bar.scss
@@ -18,10 +18,11 @@
     -ms-user-select: none;
     user-select: none;
 
-    contain: content; /* This improves CSS performance see: https://developers.google.com/web/updates/2016/06/css-containment */
+    contain: layout; /* This improves CSS performance see: https://developers.google.com/web/updates/2016/06/css-containment */
 }
 
 header {
+    overflow: hidden;
     display: flex;
     height: 100%;
     width: 100%;
